# lox

./: .clang-format  .gitignore  .gitmodules  meson.build  meson_options.txt  msvc_test.sh  setup.bat  test.lox  win_test.sh
clox/: chunk.cpp  chunk.hpp  common.hpp  compiler.cpp  compiler.hpp  error.hpp  lox.cpp  main.cpp  meson.build  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  token.cpp  token.hpp  value.cpp  value.hpp  virtual_machine.cpp  virtual_machine.hpp
include/: meson.build
jlox/: callable.cpp  callable.hpp  environment.cpp  environment.hpp  evaluator.cpp  expr.cpp  expr.hpp  lox.hpp  main.cpp  meson.build  object.hpp  parser.hpp  printer.cpp  resolver.hpp  scanner.cpp  scanner.hpp  stmt.cpp  stmt.hpp  token.cpp  token.hpp  type.hpp
src/: callable.cpp  callable.hpp  environment.cpp  environment.hpp  evaluator.cpp  evaluator.hpp  expr.cpp  expr.hpp  interpreter.cpp  interpreter.hpp  klass.cpp  klass.hpp  lox.cpp  lox.hpp  main.cpp  meson.build  object.cpp  object.hpp  overloaded.hpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  resolver.cpp  resolver.hpp  scanner.cpp  scanner.hpp  stmt.cpp  stmt.hpp  string_hacks.cpp  string_hacks.hpp  string_map.hpp  token.cpp  token.hpp  type.cpp  type.hpp
subprojects/: lak.wrap
