# testing options

option('lak_enable_tests',
	type: 'boolean',
	value: true,
	yield: false,
)

#ebnf2cpp

option('lak_enable_ebnf2cpp',
	type: 'boolean',
	value: false,
	yield: true,
)

# windowing options

option('lak_enable_windowing',
	type: 'boolean',
	value: false,
	yield: true,
)

# llvm options

option('lak_enable_llvm',
	type: 'boolean',
	value: false,
	yield: true,
)

# lmdb options

option(
  'enable_lmdb',
  type: 'boolean',
  value: false,
  yield: true,
)

# lua options

option('lak_enable_lua',
	type: 'boolean',
	value: false,
	yield: true,
)

# glm options

option('lak_enable_glm',
	type: 'boolean',
	value: false,
	yield: true,
)

# dear imgui options

option('lak_enable_imgui',
	type: 'boolean',
	value: false,
	yield: true,
)

# libfive options

option('lak_enable_libfive',
	type: 'boolean',
	value: false,
	yield: true,
)

# libgphoto2 options

option('lak_enable_libgphoto2',
	type: 'boolean',
	value: false,
	yield: true,
)

# stb options

option('lak_enable_stb',
	type: 'boolean',
	value: false,
	yield: true,
)

# godot-cpp options

option('lak_enable_godot_cpp',
	type: 'boolean',
	value: false,
	yield: true,
)
